--- a/assets/css/perso.css
+++ b/assets/css/perso.css
@@ -6,7 +6,7 @@ body {
 	background-color: Lavender;
 	margin-bottom: 10px;
 	border-radius: 5px 5px 5px 5px;
-	line-height: 80px;
+	//line-height: 80px;
 }
 
 .page-header {
@@ -44,6 +44,10 @@ body {
 	background: url(../img/enveloppe.png) Lavender right top no-repeat;
 }
 
+.CVSpan {
+	background: url(../img/diploma.png) Lavender right top no-repeat;
+}
+
 .page-bottom {
 	border-top:1px solid white;
 	type:block;
@@ -61,4 +65,38 @@ body {
 .borderPic {
 	border:white solid 8px;
 	border-radius: 5px 5px 5px 5px;
+}
+
+.table-cv  td {
+	vertical-align: middle;
+}
+
+.entry { 
+	text-align: right !important;
+	padding-right: 10px !important;
+}
+
+dl { 
+	margin-top:0px;
+	margin-bottom:0px;
+}
+
+h3 {
+	margin-bottom:5px;
+}
+
+.badge1 {
+  background-color: #BFBFBF;
+}
+.badge2 {
+  background-color: #9DC48F;
+}
+.badge3 {
+  background-color: #7DC761;
+}
+.badge4 {
+  background-color: #5ACF30;
+}
+.badge5 {
+  background-color: #3DE002;
 }
