--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,21 @@ body {
   
 [class*="span"] {
 	margin-left: 0 !important;
+	padding: 0px 10px;
+}
+
+.span12 {
+	padding: 0 15;
 }
   
 .backRound {
-	background-color: Lavender;
 	margin-bottom: 10px;
 	border-radius: 5px 5px 5px 5px;
 	border:1px #99aeb6 solid;
+}
+
+.colored {
+	background-color: Lavender;
 }
 
 .center {
@@ -33,11 +41,13 @@ body {
 	margin:20px;
 	color:black;
 	text-decoration:none;
+	border-bottom: 1px solid #3399CC;
 }
 
 .page-header  a{
 	color:black;
 	text-decoration:none;
+	font-family:MV Boli,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .nav > li > a:hover,
@@ -54,7 +64,7 @@ body {
 }
 
 .content {
-	padding: 0px 20px 0px 20px;
+	padding: 0px 20px 0px 40px;
 }
 
 .content > p {
@@ -76,7 +86,7 @@ body {
 }
 
 .page-bottom {
-	border-top:1px solid white;
+	border-top:1px solid #3399CC;
 	type:block;
 	margin-top:20px;
 	padding-top:3px;
@@ -84,7 +94,6 @@ body {
 
 #profilePic {
 	float:right;
-	border-radius: 5px 5px 5px 5px;
 	margin-left:20px;
 	margin-bottom:15px;
 }
@@ -92,6 +101,14 @@ body {
 .borderPic {
 	border:white solid 8px;
 	border-radius: 5px 5px 5px 5px;
+}
+
+.img-polaroid {
+  padding: 4px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0,0,0,.2);
+  .box-shadow(0 1px 3px rgba(0,0,0,.1));
 }
 
 .table-cv td {
@@ -114,6 +131,17 @@ dl {
 
 h3 {
 	margin-bottom:5px;
+}
+
+.h2Projects {
+	display:inline;
+	margin-right:10px;
+}
+
+.h2Projects ~ .badge {
+	position:relative;
+	bottom: 5px;
+	margin: 0px 2px;
 }
 
 .badge1 {
