--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 body { 
 	background: url(../img/pattern.png) repeat Ivory ;
 }
+
+.whole_page {
+	max-width: 1300px;
+	margin: auto;
+}
   
 [class*="span"] {
 	margin-left: 0 !important;
@@ -47,7 +52,7 @@ body {
 .page-header  a{
 	color:black;
 	text-decoration:none;
-	font-family:MV Boli,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	/*font-family:MV Boli,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
 }
 
 .nav > li > a:hover,
@@ -96,6 +101,7 @@ body {
 	float:right;
 	margin-left:20px;
 	margin-bottom:15px;
+
 }
 
 .borderPic {
