enlever les rayures, vu que personne aime :(

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body { 
-	background: url(../img/pattern.png) repeat Ivory ;
+	/*background: url(../img/pattern.png) repeat Ivory ;*/
+	background: Ivory ;
 }
 
 .whole_page {
