changement couleur badges

--- a/css/main.css
+++ b/css/main.css
@@ -162,19 +162,19 @@ h4 {
 }
 
 .badge1 {
-  background-color: #BFBFBF;
+  background-color: #d5d5d5;
 }
 .badge2 {
-  background-color: #9DC48F;
+  background-color: #d6e685;
 }
 .badge3 {
-  background-color: #7DC761;
+  background-color: #9bdb6f;
 }
 .badge4 {
-  background-color: #5ACF30;
+  background-color: #4cb647;
 }
 .badge5 {
-  background-color: #3DE002;
+  background-color: #1e9a23;
 }
 
 .highslide-gallery {
