--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
                <link rel="stylesheet" type="text/css" href="highslide/highslide-ie6.css" />
                <![endif]-->
             </head>
-            <body>
+            <body{% if page.nav == "projects" %} data-spy="scroll" data-target="#navbar" data-offset="80"{% endif %}>
                <div class="whole_page">
                <!--[if lt IE 7]>
                <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
