Atlassian internship added, and some skills modifications

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
                <![endif]-->
                <div class="page-header">
                   <h1>
-                     <a href="index.html">
+                     <a href="/">
                         Jo's page
                         <div style="color:#3399CC;display:inline;">.</div>
                      </a>
