font awesome added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
                <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
                <link rel="stylesheet" href="css/main.css">
                <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+               <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
                <link rel="shortcut icon" href="favicon.ico">
                <script type="text/javascript" src="highslide/highslide-with-gallery.packed.js"></script>
                <script type="text/javascript" src="highslide/highslide.config.js" charset="utf-8"></script>
@@ -83,17 +84,17 @@
                      <div class="center">
                         <div style="display: inline-block;" class="logo backRound colored">
                            <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
-                           <img alt="Linkedin" src="img/github-logo-s.png">
+                           <i class="icon-github icon-3x"></i>
                            </a>
                         </div>
                         <div style="display: inline-block;" class="logo backRound colored">
                            <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
-                           <img alt="Linkedin" src="img/linkedin-logo-s.png">
+                           <i class="icon-linkedin icon-3x"></i>
                            </a>
                         </div>
                         <div style="display: inline-block;" class="logo backRound colored">
                            <a title="Bitbucket" target="_blank" href="https://bitbucket.org/lenwe">
-                           <img alt="Bitbucket" src="img/bitbucket-logo-s.png">
+                           <i class="icon-bitbucket icon-3x"></i>
                            </a>
                         </div>
                      </div>
