--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,21 +14,28 @@
             <head>
                <meta charset="utf-8">
                <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
                <title>{{ page.title }}</title>
+               
+               <link rel="shortcut icon" href="favicon.ico">
+
                <meta name="description" content="">
                <meta name="viewport" content="width=device-width">
-               <link rel="stylesheet" href="css/bootstrap.min.css">
+
+               <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+               <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+               <link href='http://fonts.googleapis.com/css?family=Cantora+One' rel='stylesheet' type='text/css'>
+               <link rel="stylesheet" href="css/main.css">
+
                <style>
                   body {
                   padding-top: 30px;
                   padding-bottom: 40px;
                   }
                </style>
-               <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-               <link rel="stylesheet" href="css/main.css">
+
                <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-               <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-               <link rel="shortcut icon" href="favicon.ico">
+
                <script type="text/javascript" src="highslide/highslide-with-gallery.packed.js"></script>
                <script type="text/javascript" src="highslide/highslide.config.js" charset="utf-8"></script>
                <link rel="stylesheet" type="text/css" href="highslide/highslide.css" />
