--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,11 @@ li.active a i {
 .page-header  a{
 	color:black;
 	text-decoration:none;
-	/*font-family:MV Boli,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
+	font-family: 'Cantora One',Helvetica,Arial,sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Cantora One',Helvetica,Arial,sans-serif;
 }
 
 .nav > li > a:hover,
