pretty urls & cosmetic stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
                <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
                <link href='http://fonts.googleapis.com/css?family=Cantora+One' rel='stylesheet' type='text/css'>
-               <link rel="stylesheet" href="css/main.css">
+               <link rel="stylesheet" href="/css/main.css">
 
                <style>
                   body {
@@ -34,11 +34,11 @@
                   }
                </style>
 
-               <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+               <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
-               <script type="text/javascript" src="highslide/highslide-with-gallery.packed.js"></script>
-               <script type="text/javascript" src="highslide/highslide.config.js" charset="utf-8"></script>
-               <link rel="stylesheet" type="text/css" href="highslide/highslide.css" />
+               <script type="text/javascript" src="/highslide/highslide-with-gallery.packed.js"></script>
+               <script type="text/javascript" src="/highslide/highslide.config.js" charset="utf-8"></script>
+               <link rel="stylesheet" type="text/css" href="/highslide/highslide.css" />
                <!--[if lt IE 7]>
                <link rel="stylesheet" type="text/css" href="highslide/highslide-ie6.css" />
                <![endif]-->
@@ -51,8 +51,17 @@
                <div class="page-header">
                   <h1>
                      <a href="/">
-                        Jo's page
-                        <div style="color:#3399CC;display:inline;">.</div>
+                        <!--Jo's page-->
+                        <span class="rwletter-1">J</span><span 
+                        class="rwletter-2">o</span><span 
+                        class="rwletter-3">'</span><span 
+                        class="rwletter-4">s</span><span 
+                        class="rwletter-none">&nbsp;</span><span 
+                        class="rwletter-5">p</span><span 
+                        class="rwletter-6">a</span><span 
+                        class="rwletter-7">g</span><span 
+                        class="rwletter-8">e</span><span 
+                        class="rwletter-none" style="color:#3399CC;">.</span>
                      </a>
                   </h1>
                </div>
@@ -69,19 +78,19 @@
                               </a>
                            </li>
                            <li{% if page.nav == "projects" %} class="active"{% endif %}>
-                              <a href="projects.html">
+                              <a href="/projects">
                               <i class="icon-folder-open"></i>
                               Projects
                               </a>
                            </li>
                            <li{% if page.nav == "cv" %} class="active"{% endif %}>
-                              <a href="cv.html">
+                              <a href="/cv">
                               <i class="icon-briefcase"></i>
                               CV
                               </a>
                            </li>
                            <li{% if page.nav == "contact" %} class="active"{% endif %}>
-                              <a href="contact.html">
+                              <a href="/contact">
                               <i class="icon-pencil"></i>
                               Contact
                               </a>
