--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
                   </div>
                   <!-- /container -->
                   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-                  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+                  <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
                   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
                   
-                  <script src="js/main.js"></script>
+                  <script src="/js/main.js"></script>
                   
                   <script>
                      var _gaq=[['_setAccount','UA-35637631-1'],['_trackPageview']];
