--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
                            <div class="span12 ">
                               <p class="page-bottom">
-                                 <small>© Jonàs Brú Monserrat 2015 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a> &amp; <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a></small>
+                                 <small>© Jonàs Brú Monserrat 2015 | Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> &amp; <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a> &amp; <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a></small>
                               </p>
                            </div>
                         </div>
@@ -9,6 +9,11 @@
                   <!-- /container -->
                   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
                   <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+
+                  <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
+                  <script type="text/javascript" src="/highslide/highslide-with-gallery.packed.js"></script>
+                  <script type="text/javascript" src="/highslide/highslide.config.js" charset="utf-8"></script>
 
                   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
                   
