--- a/_includes/projectsMenu.html
+++ b/_includes/projectsMenu.html
@@ -1,6 +1,9 @@
 <div id="navbar" class="backRound colored">
 	<ul class="nav nav-list sidebar-nav">
 		<li class="active">
+			<a href="#MeaCulpa">Mea Culpa</a>
+		</li>
+		<li class="">
 			<a href="#LibraryManager">Tiny Library</a>
 		</li>
 		<li class="">
