--- a/_includes/projectsMenu.html
+++ b/_includes/projectsMenu.html
@@ -4,6 +4,9 @@
 			<a href="#MeaCulpa">Mea Culpa</a>
 		</li>
 		<li class="">
+			<a href="#Axyz">Axys</a>
+		</li>
+		<li class="">
 			<a href="#LibraryManager">Tiny Library</a>
 		</li>
 		<li class="">
