--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-body { 
-	/*background: url(../img/pattern.png) repeat Ivory ;*/
-	background: #FFFFF4 ;
-}
-
 .whole_page {
 	max-width: 1300px;
 	margin: auto;
@@ -140,6 +135,7 @@ h1,h2,h3,h4,h5,h6 {
 	float:right;
 	margin-left:20px;
 	margin-bottom:15px;
+	width: 160px;
 
 }
 
